fix(faq): fix bug when the content is too big

--- a/bot/admin/web/src/app/faq/common/components/inview-sidepanel/inview-sidepanel.component.scss
+++ b/bot/admin/web/src/app/faq/common/components/inview-sidepanel/inview-sidepanel.component.scss
@@ -21,6 +21,7 @@
   position: relative;
   top: -155px; /* TODO: find a cleaner solution */
 
+  max-width: 400px;
 }
 
 .tock--sticky {
